lite mer funktioner

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <main>
         <h1>Visa kurser</h1>
         <a href="/add">Lägg till kurs</a>
         <table border="1">
@@ -28,6 +27,7 @@
                 </tr>
             <% }) %>
         </table>
-    </main>
+
+        <a href="/about">Om denna webbplats</a>
 </body>
 </html>
