--- a/views/add.ejs
+++ b/views/add.ejs
@@ -7,24 +7,29 @@
 </head>
 <body>
     <h1>Lägg till ny kurs</h1>
+
     <% if (error) { %>
         <p style="color: red;"><%= error %></p>
     <% } %>
+
     <form action="/add" method="POST">
         <label for="coursecode">Kurskod:</label>
-        <input type="text" name="coursecode" id="coursecode" required><br>
+        <input type="text" id="coursecode" name="coursecode" required>
+        <br>
 
         <label for="coursename">Kursnamn:</label>
-        <input type="text" name="coursename" id="coursename" required><br>
+        <input type="text" id="coursename" name="coursename" required>
+        <br>
 
         <label for="syllabus">Kursplan (länk):</label>
-        <input type="text" name="syllabus" id="syllabus" required><br>
+        <input type="text" id="syllabus" name="syllabus" required>
+        <br>
 
         <label for="progression">Progression:</label>
-        <input type="text" name="progression" id="progression" required><br>
+        <input type="text" id="progression" name="progression" required>
+        <br>
 
         <button type="submit">Lägg till kurs</button>
     </form>
-    <a href="/">Tillbaka</a>
 </body>
 </html>
