--- a/views/about.ejs
+++ b/views/about.ejs
@@ -3,12 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/styles.css">
     <title>Om sidan</title>
 </head>
 <body>
     <h1>Om webbplatsen</h1>
+
+    <section class="about">
     <p>Denna webbplats tillåter användare att lagra och visa kurser de har läst.</p>
     <p>Databasserver: MySQL/MariaDB.</p>
+</section>
     <a href="/">Tillbaka till startsidan</a>
 </body>
 </html>
