--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,6 +1,106 @@
 body {
-    width: 960px;
+    height: auto;
     margin: 0 auto;
-    background-color: #cfc3b8;;
+    background: rgb(0,17,77);
+    background: linear-gradient(90deg, rgba(0,17,77,1) 0%, rgba(97,9,121,1) 50%, rgba(0,232,255,1) 100%);
     font-family: Georgia, 'Times New Roman', Times, serif;
+    z-index: 1;
+    margin-left: 5em;
+    margin-right: 5em;
+}
+
+h1 {
+    margin-top: 3em;
+    color: white;
+    text-align: center;
+    font-size: 2em;
+}
+
+table {
+    z-index: 2;
+    background: white;
+    margin: 6em auto;
+    text-align: center;
+    border-radius: 6px;
+    overflow: hidden;
+    box-shadow: 0 12px 5px rgba(32,32,32,.3);
+}
+
+th {
+    background-color: #fbc8f3;
+    padding: 10px 15px;
+    text-transform: uppercase;
+}
+
+td {
+    padding: 10px 15px;
+}
+
+tr:nth-child(odd) {
+    background-color: #edecf6;
+}
+
+table a {
+    color: #592d71;
+}
+
+.links {
+    display: flex;
+    justify-content: center;
+    gap: 40em;
+}
+    a {
+        color: white;
+        font-size: 1.2em;
+    }
+
+
+form {
+    margin: 3em auto;
+    text-align: center;
+    font-size: 1.4em;
+    line-height: 2em;
+    color: white;
+}
+
+#coursecode {
+    width: 5em;
+    padding: 0.3em 0;
+}
+
+#coursename {
+    width: 20em;
+    padding: 0.3em 0;  
+}
+
+#syllabus {
+    width: 35em;
+    padding: 0.3em 0;  
+}
+
+#progression {
+    width: 2em;
+    padding: 0.3em 0;
+}
+
+button {
+    margin-top: 1em;
+    font-size: 1em;
+    font-weight: bold;
+    padding: 0.5em;
+    border-radius: 7px;
+    background-color: #fce3f8;
+}
+
+button:hover {
+    cursor: pointer;
+}
+
+p {
+    color: white;
+    font-size: 1.2em;
+}
+
+.about {
+    margin: 5em auto;
 }
