--- a/views/add.ejs
+++ b/views/add.ejs
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/styles.css">
     <title>Lägg till kurs</title>
 </head>
 <body>
@@ -31,5 +32,7 @@
 
         <button type="submit">Lägg till kurs</button>
     </form>
+
+    <a href="/">Tillbaka till startsidan</a>
 </body>
 </html>
