--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,8 +7,7 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-        <h1>Visa kurser</h1>
-        <a href="/add">Lägg till kurs</a>
+        <h1>Dina kurser</h1>
         <table border="1">
             <tr>
                 <th>Kurskod</th>
@@ -27,7 +26,9 @@
                 </tr>
             <% }) %>
         </table>
-
+        <section class="links">
+        <a href="/add">Lägg till kurs</a>
         <a href="/about">Om denna webbplats</a>
+    </section>
 </body>
 </html>
