--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,6 +8,7 @@
 </head>
 <body>
         <h1>Dina kurser</h1>
+        <section class="table-container">
         <table border="1">
             <tr>
                 <th>Kurskod</th>
@@ -26,6 +27,8 @@
                 </tr>
             <% }) %>
         </table>
+    </div>
+    </section>
         <section class="links">
         <a href="/add">Lägg till kurs</a>
         <a href="/about">Om denna webbplats</a>
