--- a/views/about.ejs
+++ b/views/about.ejs
@@ -11,7 +11,27 @@
 
     <section class="about">
     <p>Denna webbplats tillåter användare att lagra och visa kurser de har läst.</p>
-    <p>Databasserver: MySQL/MariaDB.</p>
+    <p>Genom att skapa en webbapplikation med Node.js och Express har jag fått en
+        förståelse för hur serverbaserad webbutveckling fungerar. Jag har lärt mig
+        att hantera serverförfrågningar, svara med lämpliga views samt presentera data på
+        ett strukturerat sätt. Användningen av Express har möjliggjort organiseringen av mina
+        routes och hanteringen av logik för att presentera data samt ta emot användarinmatning.</p>
+
+        <p>En annan del av uppgiften var att använda en relationsdatabas för att lagra och hämta data,
+            vilket jag gjort med hjälp av MySQL/MariaDB. Genom att använda detta tillsammans med Node.js
+            så har jag lärt mig hur man etablerar en säker och stabil anslutning mellan servern och databasen.
+            Jag har använt mig av SQL-kommandon för att interagera med databasen och kunna uppdatera
+            kursinformationen i realtid.</p>
+
+            <p>EJS har använts som view engine för att presentera data på en användarvänlig och dynamisk
+                sida. Genom integration av EJS med Express och hämtning av kursinformation från databasen har jag 
+                lärt mig hur man effektivt presenterar data från servern till användaren.</p>
+
+                <p>Sammanfattningsvis har jag genom denna laboration fått en grund i serverbaserad
+                    webbutveckling med Node.js och Express, samt i hantering av en relationsdatabas med MySQL/MariaDB.
+                    Jag har lärt mig att ansluta till och interagera med databaser, presentera data dynamiskt i webbsidor samt hantering av användarinmatning
+                    effektivt.</p>
+
 </section>
     <a href="/">Tillbaka till startsidan</a>
 </body>
