--- a/views/about.ejs
+++ b/views/about.ejs
@@ -26,7 +26,7 @@
             <p>EJS har använts som view engine för att presentera data på en användarvänlig och dynamisk
                 sida. Genom integration av EJS med Express och hämtning av kursinformation från databasen har jag 
                 lärt mig hur man effektivt presenterar data från servern till användaren. Railway användes för att 
-            publicera databasen samt webbapplikationen.</p>
+            publicera databasen samt render för att publicera webbapplikationen.</p>
 
                 <p>Sammanfattningsvis har jag genom denna laboration fått en grund i serverbaserad
                     webbutveckling med Node.js och Express, samt i hantering av en relationsdatabas med MySQL/MariaDB.
